# soldoway

./: .gitignore  README.md  empty-module.js  next.config.ts  package-lock.json  package.json  skills-lock.json
.agents/skills/solana-dev/: SKILL.md
anchor/: Anchor.toml
anchor/programs/vault/: Cargo.toml
anchor/programs/vault/src/: lib.rs  tests.rs
app/: globals.css  layout.tsx  page.tsx
app/(pages)/: layout.tsx
app/(pages)/dashboard/: CreateTaskModal.tsx  layout.tsx  page.tsx  use-soldoway.ts
app/(pages)/referral/: page.tsx
app/(pages)/sales/: page.tsx
app/anchor/: vault.json
app/api/campaigns/: route.ts
app/api/meetings/: route.ts
app/api/meetings/validate/: route.ts
app/components/: FlowSection.tsx  client-only.tsx  cluster-context.tsx  cluster-select.tsx  grid-background.tsx  providers.tsx  theme-toggle.tsx  vault-card.tsx  wallet-button.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard/referral/: page.tsx
app/dashboard/sales/: page.tsx
app/lib/: errors.ts  explorer.ts  lamports.ts  solana-client-context.tsx  solana-client.ts
app/lib/hooks/: use-balance.ts  use-send-transaction.ts
app/lib/wallet/: context.tsx  signer.ts  standard.ts  types.ts
app/r/[address]/: page.tsx
prisma/: schema.prisma
