[package]
name = "vault"
version = "0.1.0"
description = "A simple SOL vault program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
spl-stake-pool = { version = "2.0.3", features = ["no-entrypoint"] }

[dev-dependencies]
litesvm = "=0.7.1"
solana-sdk = "2.3"
